# docpull

./: .bandit  .bumpversion.cfg  .editorconfig  .git-push-verified.sh  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTOMATION_SETUP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTENANCE.md  MANIFEST.in  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SUPPORT.md  codecov.yml  config.example.json  config.example.yaml  manual-todo.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_source.md
.github/workflows/: auto-merge-dependabot.yml  labeler.yml  lint.yml  publish.yml  release.yml  security.yml  stale.yml  test.yml  update-pre-commit.yml
doc_fetcher/: __init__.py  __main__.py  cli.py  config.py
doc_fetcher/fetchers/: __init__.py  base.py  bun.py  d3_devdocs.py  nextjs.py  parallel_base.py  plaid.py  react.py  stripe.py  tailwind.py
doc_fetcher/utils/: file_utils.py  logging_config.py
docpull/: __init__.py  archive.py  cli.py  config.py  indexer.py  metadata_extractor.py  sources_config.py
docpull/fetchers/: __init__.py  async_fetcher.py  base.py  bun.py  d3_devdocs.py  generic.py  generic_async.py  nextjs.py  parallel_base.py  plaid.py  react.py  stripe.py  tailwind.py
docpull/formatters/: __init__.py  base.py  json.py
docpull/processors/: content_filter.py  deduplicator.py  language_filter.py  size_limiter.py
docpull/profiles/: __init__.py
docpull/utils/: __init__.py  file_utils.py  logging_config.py
docs/configs/: config.example.json  config.example.yaml
docs/examples/: advanced_usage.py  basic_usage.py
docs/project-notes/: DOC_FETCHER_README.md  FETCH_RESULTS.md  FINAL_SUMMARY.md  INSTALLATION.md  MIGRATION.md  NEXTJS_FETCH_RESULTS.md  QUICKSTART.md  SHELBY_SKILLS.md  SIMPLIFICATIONS.md  SKILLS_CREATED.md  SPECIALIZED_SKILLS_STATUS.md  SPEED_IMPROVEMENTS.md
examples/: README.md  example_usage.py  fetch.py
scripts/: fetch_docs.py  generate_stripe_guides.py  reorganize-docs.py
src/docpull/core/: fetcher.py
src/docpull/discovery/: sitemap.py
src/docpull/discovery/link_extractors/: browser.py  enhanced.py
src/docpull/pipeline/steps/: save_json.py
tests/: __init__.py  conftest.py  test_config.py  test_fetchers.py  test_formatters.py  test_metadata_extractor.py
tests/benchmarks/: test_performance.py
tests/test_fetchers/: __init__.py  test_async_fetcher.py  test_fetchers.py
tests/test_formatters/: __init__.py  test_formatters.py
tests/test_processors/: __init__.py
