[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docpull"
version = "1.0.0"
description = "Pull documentation from the web and convert to clean markdown"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Zach", email = "zach@example.com"}
]
keywords = ["documentation", "markdown", "web-scraping", "docs", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
docpull = "doc_fetcher.cli:main"

[project.urls]
Homepage = "https://github.com/zachshallbetter/docpull"
Repository = "https://github.com/zachshallbetter/docpull"
Issues = "https://github.com/zachshallbetter/docpull/issues"
Documentation = "https://github.com/zachshallbetter/docpull#readme"

[tool.black]
line-length = 110
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 110
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
